@startuml class-diagram
  interface "INewsDB\n<b>interface INewsDB</b>" as INewsDB {
    +saveNews(title, category, description, source)
    +getNews()
    +deleteNews(id)
  }

  class "NewsDB\n<b>Класс NewsDB</b>" as NewsDB {
    +DB_NAME : string
    -_db : SQLite3
    #getDb()
    +__construct()
    +__destruct()
    +saveNews(title, category, description, source)
    +getNews()
    +deleteNews(id)
  }

  class "SQLite3\n<b>Встроенный класс PHP</b>" as SQLite3

  INewsDB <|-- NewsDB
  NewsDB *-- SQLite3
@enduml
